Página de artículos, y barra de navegación en las demas páginas de usuario

--- a/frontend/usuario/perfil.html
+++ b/frontend/usuario/perfil.html
@@ -153,6 +153,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <!-- Scripts de JS -->
-    <script src="js/transversing.js"></script>
+    <script src=""></script>
 </body>
 </html>
