--- a/frontend/admin/crud_articulos.html
+++ b/frontend/admin/crud_articulos.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pantalla de Administración</title>
+    <title>CRUD de Etiquetas</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/Inicio.css">
+    <link rel="stylesheet" href="css/crud_etiquetas.css">
 </head>
 
 <body>
@@ -34,7 +34,6 @@
         </nav>
     </aside>
 
-
     <div class="vertical-divider"></div>
 
     <main class="main-content">
@@ -50,18 +49,103 @@
                     <small>Administrador</small>
                 </div>
                 <a href="../usuario/perfil.html">
-                    <img src="img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40"
-                        height="40">
+                    <img src="img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40" height="40">
                 </a>
             </div>
         </header>
 
         <hr class="divider">
 
+        <div class="crud-header">
+            <input type="text" id="searchBar" class="search-bar" placeholder="Buscar Etiqueta" oninput="searchTag()">
+        </div>
+
+        <div class="table-container">
+            <table class="crud-table" id="crudTable">
+                <thead>
+                    <tr>
+                        <th>Acciones</th>
+                        <th>Articulo</th>
+                        <th>Imagen</th>
+                        <th>Fecha de Creación</th>
+                        <th>Estado</th>
+                        <th>Creador</th>
+                        <th>Etiquetas</th>
+                    </tr>
+                </thead>
+                <tbody id="tableBody">
+                </tbody>
+            </table>
+        </div>
+
+<div class="pagination-container">
+    <div class="save-container">
+        <button class="btn-save" onclick="saveChanges()">Guardar Cambios</button>
+    </div>
+    <span id="pageInfo"></span>
+    <div class="pagination-buttons">
+        <button onclick="goToFirstPage()" >Primero</button>
+        <button onclick="prevPage()" >Anterior</button>
+        <button onclick="nextPage()" >Siguiente</button>
+        <button onclick="goToLastPage()" >Último</button>
+    </div>
+</div>
+
+    
+    </main>
+
+<div class="modal fade" id="editTagModal" tabindex="-1" role="dialog" aria-labelledby="editTagModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editTagModalLabel">Editar Artículo</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="editTagForm">
+                    <div class="form-group">
+                        <label for="editArticleName">Articulo</label>
+                        <input type="text" class="form-control" id="editArticleName" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editImage">Imagen</label>
+                        <input type="text" class="form-control" id="editImage" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editDate">Fecha de Creación</label>
+                        <input type="date" class="form-control" id="editDate" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editStatus">Estado</label>
+                        <select class="form-control" id="editStatus">
+                            <option value="activo">Publicado</option>
+                            <option value="inactivo">No Publicado</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="editCreator">Creador</label>
+                        <input type="text" class="form-control" id="editCreator" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editTagName">Etiquetas</label>
+                        <input type="text" class="form-control" id="editTagName" required>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" id="updateTagBtn">Actualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/crud_articulos.js"></script>
 </body>
 
 </html>
