Modales de la página de perfil-de-usuario y Inicio de esquemas de la API

--- a/frontend/usuario/inicio_editor.html
+++ b/frontend/usuario/inicio_editor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil</title>
+    <title>Editor</title>
 
 
     <!--Font Awesome-->
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-6">
                 <h1>CREA</h1>
-                <button class="btn btn-success">Nuevo articulo</button>
+                <a href="./redaccion_articulos.html"><button class="btn btn-success">Nuevo articulo</button></a>
             </div>
             <div class="col-6">
                 <h1>DUDAS</h1>
