--- a/frontend/admin/moderacion_comentarios.html
+++ b/frontend/admin/moderacion_comentarios.html
@@ -62,6 +62,66 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   
+    <!-- Comentario -->
+    <div id="comentarios-container" class="comentarios-container">
+        <div class="comentario">
+            <img src="img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
+          </a>
+          <div class="contenido-comentario">
+            <a href="/frontend/usuario/perfil.html" class="nombre-usuario">Nombre de Usuario</a>
+            <p>Este es un comentario de ejemplo que será moderado.</p>
+            <div class="botones-moderacion">
+              <button class="btn aceptar" onclick="aceptarComentario(this)">Aceptar</button>
+              <button class="btn eliminar" onclick="eliminarComentario(this)">Eliminar</button>
+              <button class="btn suspender" onclick="suspenderComentario(this, 'Nombre de Usuario')">Suspender</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Comentario 2 -->
+      <div id="comentarios-container" class="comentarios-container">
+        <div class="comentario">
+            <img src="img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
+          </a>
+          <div class="contenido-comentario">
+            <a href="/frontend/usuario/perfil.html" class="nombre-usuario">Nombre de Usuario</a>
+            <p>Este es un comentario de ejemplo que será moderado.</p>
+            <div class="botones-moderacion">
+              <button class="btn aceptar" onclick="aceptarComentario(this)">Aceptar</button>
+              <button class="btn eliminar" onclick="eliminarComentario(this)">Eliminar</button>
+              <button class="btn suspender" onclick="suspenderComentario(this, 'Nombre de Usuario')">Suspender</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Comentario 3 -->
+      <div id="comentarios-container" class="comentarios-container">
+        <div class="comentario">
+            <img src="img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
+          </a>
+          <div class="contenido-comentario">
+            <a href="/frontend/usuario/perfil.html" class="nombre-usuario">Nombre de Usuario</a>
+            <p>Este es un comentario de ejemplo que será moderado.</p>
+            <div class="botones-moderacion">
+              <button class="btn aceptar" onclick="aceptarComentario(this)">Aceptar</button>
+              <button class="btn eliminar" onclick="eliminarComentario(this)">Eliminar</button>
+              <button class="btn suspender" onclick="suspenderComentario(this, 'Nombre de Usuario')">Suspender</button>
+            </div>
+          </div>
+        </div>
+      </div>
+       <!-- Controles de la tabla -->
+      <div class="controles">
+        <button class="btn-navegacion anterior" onclick="cambiarSeccion('anterior')">Anterior</button>
+        <button class="btn-navegacion siguiente" onclick="cambiarSeccion('siguiente')">Siguiente</button>
+        <button class="btn-guardar" onclick="guardarCambios()">Guardar cambios</button>
+      </div>
+      
+      <script src="js/moderacion_comentarios.js"></script>
+      <link rel="stylesheet" href="css/moderacion_comentarios.css">
+
 </body>
 
 </html>
+
