--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="profile-box">
-                    <img src="" alt="Frontend Developer" class="img-fluid">
+                    <img src="img/mariana.jpg" alt="Frontend Developer" class="img-fluid">
                     <h4>Frontend Developer</h4>
                     <h5>Mariana Navarro</h5>
                     <p>Responsable de crear y mejorar la interfaz de usuario para una experiencia de navegación intuitiva y atractiva. Maneja tecnologías como HTML, CSS y JavaScript para garantizar la funcionalidad y el diseño visual de aplicaciones web.</p>
@@ -84,9 +84,9 @@
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="profile-box">
-                    <img src="" alt="DB Administrator" class="img-fluid">
+                    <img src="img/diego.png" alt="DB Administrator" class="img-fluid">
                     <h4>DB Administrator</h4>
-                    <h5></h5>
+                    <h5>Diego Escamilla</h5>
                     <p>Especialista en la gestión y mantenimiento de bases de datos. Asegura la integridad de los datos, realiza optimizaciones de rendimiento y supervisa las copias de seguridad. Utiliza herramientas como MySQL, PostgreSQL o MongoDB.</p>
                 </div>
             </div>
