Endpoints de dudas y articulos finalizado, se dividieron los queries y esquemas de manera mas ordenada

--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metropolitan</title>
-    <link rel="stylesheet" href="css/estiloinicio.css">
 
     <!--Bootstrap icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css">
@@ -23,6 +22,7 @@
      />
 
     <!-- Estilos -->
+    <link rel="stylesheet" href="./css/estiloinicio.css">
     <link rel="stylesheet" href="./css/navbar.css">
 </head>
 <body>
