Se corrijieron todos los endpoints y quieres para que funcionaran correctamente en Python, Postman, y en la aplicacion

--- a/frontend/usuario/perfil.html
+++ b/frontend/usuario/perfil.html
@@ -264,5 +264,7 @@
     
     <!-- Scripts de JS -->
     <script src="./js/perfil.js"></script>
+
+    <script src="./js/perfil_ajax.js"></script>
 </body>
 </html>
