--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -76,7 +76,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="profile-box">
-                    <img src="" alt="Backend Developer" class="img-fluid">
+                    <img src="img/manuel.png" alt="Backend Developer" class="img-fluid">
                     <h4>Backend Developer</h4>
                     <h5>Manuel Magaña</h5>
                     <p>Encargado de construir y mantener el lado del servidor de aplicaciones, gestionando bases de datos y lógica empresarial. Usa tecnologías como Node.js, Python y SQL para asegurar que los sistemas funcionen de manera eficiente y segura.</p>
