Modal para seleccionar estiquetas e imagenes de perfil en la pagina de perfil

--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -59,7 +59,7 @@
                     <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
                     <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
-                <a href="./perfil.html">
+                <a href="../usuario/perfil.html">
                     <img id="navbar-info-usuario-foto" src="./img/perfil_default.png" alt="Foto de perfil">
                 </a>
             </div>
