--- a/frontend/admin/estadísticas.html
+++ b/frontend/admin/estadísticas.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pantalla de Administración</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/Inicio.css">
+    <link rel="stylesheet" href="css/estadisticas.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -34,7 +35,6 @@
         </nav>
     </aside>
 
-
     <div class="vertical-divider"></div>
 
     <main class="main-content">
@@ -58,10 +58,33 @@
 
         <hr class="divider">
 
+        <!-- Botones para alternar entre secciones -->
+        <div class="btn-group mt-3 mb-4" role="group">
+            <button class="btn btn-primary" data-section="usuarios">Usuarios</button>
+            <button class="btn btn-primary" data-section="roles">Roles</button>
+            <button class="btn btn-primary" data-section="etiquetas">Etiquetas</button>
+            <button class="btn btn-primary" data-section="popularidad">Popularidad</button>
+        </div>
+
+        <!-- Secciones dinámicas -->
+        <div id="usuarios" class="content-section">
+            <canvas id="usuarios-chart"></canvas>
+        </div>
+        <div id="roles" class="content-section">
+            <canvas id="roles-chart"></canvas>
+        </div>
+        <div id="etiquetas" class="content-section">
+            <canvas id="etiquetas-chart"></canvas>
+        </div>
+        <div id="popularidad" class="content-section">
+            <canvas id="popularidad-chart"></canvas>
+        </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/estadisticas.js"></script>
 </body>
 
 </html>
