--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -114,10 +114,10 @@
     </section>
 
     <div class="container mt-5">
-        <h2 class="text-left font-weight-bold">Contactanos</h2>
+        <h2 class="text-center font-weight-bold">Contactanos</h2>
         <div class="row">
           <!-- Formulario -->
-          <div class="col-md-6">
+          <div class="col-md-12">
             <form>
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Nombre Completo" required>
@@ -130,13 +130,6 @@
               </div>
               <button type="submit" class="btn btn-dark btn-block" onclick="alert('El mensaje ha sido enviado')">Enviar</button>
             </form>
-          </div>
-          <!-- Imagen -->
-          <div class="col-md-6 d-flex justify-content-center align-items-center">
-            <label class="upload-container">
-              <input type="file" accept="image/*" class="file-input">
-              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Placeholder Image">
-            </label>
           </div>
         </div>
       </div>
