--- a/frontend/usuario/articulos.html
+++ b/frontend/usuario/articulos.html
@@ -93,6 +93,11 @@
         </div>
     </div>
 
+    <!-- Botón de Reportar Artículo -->
+    <div class="text-center mt-4">
+        <button id="btn-reportar" class="btn btn-danger">REPORTAR</button>
+    </div>
+
     <!-- Seccion de comentarios -->
     <div id="contenedor-comentarios">
         <!-- Input para escribir un comentario -->
@@ -149,6 +154,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Scripts de JS -->
-    <script src=""></script>
+    <script src="js/articulos.js"></script>
 </body>
 </html>
