--- a/frontend/usuario/articulos.html
+++ b/frontend/usuario/articulos.html
@@ -115,6 +115,7 @@
                 <div class="contenedor-contenido-comentario">
                     <span class="comentario-contenido">Este es un comentario.</span>
                 </div>
+                <button class="btn-reportar-comentario btn btn-danger btn-sm mt-2">Reportar</button>
             </li>
             <li class="comentario-item">
                 <div class="contenedor-info-usuario-comentario">
@@ -123,6 +124,7 @@
                 <div class="contenedor-contenido-comentario">
                     <span class="comentario-contenido">Otro comentario interesante.</span>
                 </div>
+                <button class="btn-reportar-comentario btn btn-danger btn-sm mt-2">Reportar</button>
             </li>
             <li class="comentario-item">
                 <div class="contenedor-info-usuario-comentario">
@@ -131,8 +133,9 @@
                 <div class="contenedor-contenido-comentario">
                     <span class="comentario-contenido">Un tercer comentario.</span>
                 </div>
+                <button class="btn-reportar-comentario btn btn-danger btn-sm mt-2">Reportar</button>
             </li>
-        </ul>
+        </ul>        
     </div>
     
 
