--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -92,8 +92,9 @@
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="profile-box">
-                    <img src="" alt="Product Manager" class="img-fluid">
+                    <img src="img/maximiliano.png" alt="Product Manager" class="img-fluid">
                     <h4>Product Manager</h4>
+                    <h5>Maximiliano Juárez</h5>
                     <p>Lidera la estrategia y visión del producto, asegurándose de que los equipos de desarrollo construyan soluciones alineadas con las necesidades del cliente. Coordina entre equipos y supervisa el ciclo de vida del producto desde su concepción hasta el lanzamiento.</p>
                 </div>
             </div>
